2014-11-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\footnote): do not set \indent and \noindent
	to their \ptex... versions; these become global settings, and seem
	unnecessary since the only time we redefine \indent and \noindent
	is with @firstparagraphindent for section headings, and footnotes
	cannot work in headings anyway.  What am I missing?  Could not
	construct an example where it mattered.
	(\errfootnoteheading): new macro, for \chapmacro and \sectionheading.
	(\errfootnotenest): rename from \errfootnote.
	* doc/texinfo.texi (Footnotes): mention that they cannot be nested
	and cannot appear in section headings.

2014-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.h (KEYMAP_ENTRY) <function>: Replace with a union 
	to avoid casts on accessing it as a Keymap.  All uses updated.

2014-11-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (ea_delete, ea_transpose_chars): Handle 
	multi-byte characters.
	(ea_swap_chars, ea_remove_text): New static functions.

	(read_and_dispatch_in_echo_area)
	(echo_area_prep_read): Line invalidating echo area line map 
	moved between functions.

2014-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/window-split-dir.sh: New test.
	* info/t/star-note-non-whitespace.sh: New test.

2014-11-11  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: minimize function header comments, reorder,
	other comment cleanups.  No functional changes intended.

2014-11-10  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: do not call findprog on a user-defined $TEX.
	Report from Per Mildner, 10 Nov 2014 12:26:08.

2014-11-10  Jason Hood  <jadoxa@yahoo.com.au>  (tiny change)

	* install-info/install-info.c (reformat_new_entries): respect
	--maxwidth if given.

2014-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (find_invocation_node_by_nodename): New 
	function.
	(info_intuit_options_node): If passed Top node, call it to get a 